--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,8 +39,8 @@
         </activity>
 
         <meta-data
-            android:name="com.openweather.API_KEY"
-            android:value="${OPEN_WEATHER_API_KEY}"/>
+            android:name="com.weatherapi.API_KEY"
+            android:value="${WEATHER_API_KEY}"/>
     </application>
 
 </manifest>
