--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,13 @@
             android:exported="true">
         </activity>
 
+        <activity
+            android:name=".SettingsActivity"
+            android:screenOrientation="portrait"
+            android:exported="true">
+        </activity>
+
+
         <meta-data
             android:name="com.weatherapi.API_KEY"
             android:value="${WEATHER_API_KEY}"/>
